syntax = "proto3";

package NFMsg; 

import "NFMsgBase.proto";

///////////////AI/////////////////////////////////////////////////////////////////////////////////////
//EGMI_REQ_AI_ONWER
message ReqAIOnwer
{
    Ident	ai_id 		= 1;
}

///////////////组队/////////////////////////////////////////////////////////////////////////////////////
message TeamInfo
{
    Ident					team_id 		= 1;			//队伍ID
	Ident					captain_id 		= 2;			//队长ID
	repeated TeammemberInfo 		teammemberInfo 	= 3;			//队伍成员
}

message TeammemberInfo
{
    Ident		player_id 		= 1;			//成员ID
	string		name 			= 2;			//名字
	int32		nLevel 			= 3;			//等级
	int32		job 			= 4;			//职业
	string		HeadIcon		= 5;			//头像
}

//EGMI_REQ_CREATE_TEAM                       		= 860; 	// 申请创建队伍
//EGMI_ACK_CREATE_TEAM							= 861; 	// 创建队伍结果
message ReqAckCreateTeam
{
    Ident		team_id = 1;
	TeamInfo xTeamInfo	= 2;				//队伍详细信息	
}

//EGMI_REQ_JOIN_TEAM                         		= 862; 	// 申请加入队伍
//EGMI_ACK_JOIN_TEAM								= 863; 	// 加入队伍结果
message ReqAckJoinTeam
{
    Ident		team_id = 1;    
	TeamInfo xTeamInfo	= 2;				//队伍详细信息
}

//EGMI_REQ_LEAVE_TEAM                        		= 864; 	// 申请离开队伍/
//EGMI_ACK_LEAVE_TEAM								= 865; 	// 离开队伍结果 
message ReqAckLeaveTeam
{
    Ident		team_id = 1;
	TeamInfo xTeamInfo	= 2;				//队伍详细信息
}


//	EGMI_REQ_OPRMEMBER_TEAM							= 867; 	// 操作成员
//	EGMI_ACK_OPRMEMBER_TEAM							= 868; 	// 操作成员 
message ReqAckOprTeamMember
{
	enum EGTeamMemberOprType
	{
		EGAT_DOWN = 0;
		EGAT_UP = 1;
		EGAT_KICK = 2;
		
		EGAT_APPOINT 		= 3;//任命
		EGAT_FIRE 			= 4;//撤职
		EGAT_DEMISE 		= 5;//禅让
		EGAT_ACCEPTAPPLY 	= 6;//收人
		EGAT_DENYAPPLY 		= 7;//拒收
		EGAT_KICKOUT 		= 8;//开除
	}
	Ident						team_id = 1;
    Ident						member_id = 2;//被操作的ID
    EGTeamMemberOprType		type = 3;
	TeamInfo 					xTeamInfo	= 4;				//队伍详细信息
}

//	EGMI_REQ_INVITE_TEAM							= 866; 	// 邀请加入队伍
message ReqAckInviteTeam
{	
	Ident						team_id = 1;
    Ident						self_id = 2;//
	Ident						invite_target_id = 3;//
}

//	EGMI_REQ_TEAM_ENTER_ECTYPE					= 869; 	// 组队进副本
message ReqTeamEnterEctype
{	
	Ident						team_id = 1;
    Ident						self_id = 2;//
	int32						nEctypeID = 3;//
	int32						nGroupID = 4;//
	int32						nResult 	= 5;//
	int32						nServerID 	= 6;//
}

//	EGMI_ACK_TEAM_ENTER_ECTYPE						= 870; 	// 组队进副本
message AckTeamEnterEctype
{	
	Ident						team_id = 1;
    Ident						self_id = 2;//
	int32						nEctypeID = 3;//
	int32						nGroupID = 4;//
	int32						nResult 	= 5;//
}


///////////////big map/////////////////////////////////////////////////////////////////////////////////////
message GridClanBaseInfo
{
	Ident						id = 1;				//ID
	int32						level = 2;			//Level
	int32						count = 3;			//人数
	int32						resource = 4;		//资源
	bytes						icon = 5;			//Icon
}

//	EGMI_REQ_MAP_GRID_INFO
message ReqBigMapGridInfo
{	
	repeated bytes						map_title_id = 1;
}

message BigMapGridBaseInfo
{
	bytes						id = 1;				//GridID
	GridClanBaseInfo			guild_info = 2;			//所属占领公会
	
	//war state
	
	//kingwar
	int32						kingwar_time 	= 10;			//开始时间
	Ident						kingwarrer 		= 11;			//发动者
	
	//hurting
	int32						hurting_time 	= 20;			//狩猎开始时间
	Ident						hurter 			= 21;			//狩猎者
}

message BigMapLeaveMsg
{
	Ident						owner = 1;//留言者
	bytes						owner_name = 2;//留言者
	bytes						msg_data = 3;//留言内容
	int32						msg_time = 4;//留言时间
	int32						owner_level = 5;//留言时level
}
	
message BigMapWarHistory
{
	GridClanBaseInfo			red_info = 1;				//红方	
	GridClanBaseInfo			blue_info = 2;				//蓝方	
	
	Ident						winner_id = 10;	//winner
	int32						war_time = 11;	//war时间
}
	
message BigMapGridDetailInfo
{
	BigMapGridBaseInfo			grid_base_info 	= 1;
	
	repeated GridClanBaseInfo			stay_guid_list 	= 2;	//
	repeated BigMapLeaveMsg				leave_msg 		= 3;	//此地图留言(<=10)
	repeated BigMapWarHistory			war_history 	= 4;	//此地图历史战争信息(<=10)
}

//	EGMI_ACK_MAP_GRID_INFO
message AckBigMapGridInfo
{
	repeated BigMapGridDetailInfo						map_data = 1;
}

//	EGMI_REQ_BIG_MAP_GRID
message ReqBigMapInfo
{
}

//	EGMI_ACK_BIG_MAP_GRID
message AckBigMapInfo
{
	repeated BigMapGridBaseInfo			grid_base_info = 1;	
}

//	EGMI_REQ_HOLD_MAP_GRID
message ReqHoldMapGrid
{
	bytes						map_title_id = 1;
	Ident						guild_id = 2;
}
//	EGMI_ACK_HOLD_MAP_GRID
message AckHoldMapGrid
{
}

//	EGMI_REQ_LEAVE_MSG_MAP_GRID
message ReqLeaveMapMsg
{
	bytes						map_title_id = 1;
	BigMapLeaveMsg				leave_msg = 2;
}
//	EGMI_ACK_LEAVE_MSG_MAP_GRID
message AckLeaveMapMsg
{
}

//	EGMI_REQ_GET_MAP_GRID_AWARD
message ReqGetMapAward
{
	bytes						map_title_id = 1;
}
//	EGMI_ACK_GET_MAP_GRID_AWARD
message AckGetMapAward
{
}

//	EGMI_REQ_MAP_GRID_HUNTING
message ReqMapHunting
{
	bytes						map_title_id = 1;
}
//	EGMI_ACK_MAP_GRID_HUNTING
message AckMapHunting
{
}

//	EGMI_REQ_MAP_GRID_KING_WAR
message ReqMapKingWar
{
	bytes						map_title = 1;
}
//	EGMI_ACK_MAP_GRID_KING_WAR
message AckMapKingWar
{
	bytes						map_title = 1;
}